fixed spacing

--- a/src/App.css
+++ b/src/App.css
@@ -6,4 +6,5 @@
 
 body {
     background-color: #ffb7c5;
+    overflow: hidden;
 }
