--- a/src/Components/HomeComponent/Home.css
+++ b/src/Components/HomeComponent/Home.css
@@ -4,7 +4,7 @@
     background: url(../../Images/sakuraHome.png) center 0/cover no-repeat fixed;
     background-color: #ffb7c5;
     width: 100%;
-    height: 93.5vh;
+    height: 100vh;
 }
 
 .homeDiv {
@@ -19,6 +19,7 @@
     animation: fadeIn ease-in 3s; 
     animation-fill-mode: forwards;
     text-decoration: none;
+    padding-bottom: 10vh;
 }
 
 .homeText:hover {
