--- a/src/Components/NavbarComponent/Navbar.css
+++ b/src/Components/NavbarComponent/Navbar.css
@@ -32,7 +32,6 @@
     justify-content: flex-end;
     padding: 0;
     font-size: 2rem;
-    height: 6.5vh;
 }
 
 .navbarBrand {
